# stepik

./: .gitignore  README.md
cpp_beginning/1_5_while/1_5_1/src/: main.cpp
cpp_beginning/1_5_while/1_5_10/src/: main.cpp
cpp_beginning/1_5_while/1_5_11/src/: main.cpp
cpp_beginning/1_5_while/1_5_12/src/: main.cpp
cpp_beginning/1_5_while/1_5_13/src/: main.cpp
cpp_beginning/1_5_while/1_5_2/src/: main.cpp
cpp_beginning/1_5_while/1_5_3/src/: main.cpp
cpp_beginning/1_5_while/1_5_4/src/: main.cpp
cpp_beginning/1_5_while/1_5_5/: CMakeLists.txt
cpp_beginning/1_5_while/1_5_5/src/: main.cpp
cpp_beginning/1_5_while/1_5_6/src/: main.cpp
cpp_beginning/1_6_double/1_6_4/: CMakeLists.txt
cpp_beginning/1_7_for_and_array/1_7_10/: CMakeLists.txt
cpp_beginning/1_7_for_and_array/1_7_10/src/: main.cpp
data_science_python/1_2/: 1_2_1.py  1_2_2.py  1_2_3.py
data_science_python/1_3/: 1_3_1.py  1_3_2.py
math_and_python/1_2_base/: 1_2_2.py  1_2_3.py
math_and_python/2_2_math/: 2_2_1.py  2_2_3.py  2_2_4.py  2_2_5.py
math_and_python/2_3_array/: 2_3_1.py  2_3_2.py  2_3_3.py  2_3_4.py  2_3_5.py
math_and_python/2_4_string/: 2_4_1.py  2_4_2.py  2_4_3.py  2_4_4.py
math_and_python/2_5_condition/: 2_5_1.py  2_5_2.py  2_5_3.py
math_and_python/2_6_loop/: 2_6_1.py
math_and_python/6_1_numpy_base/: 6_1_1.py  6_1_2.py  6_1_3.py  6_1_4.py  6_1_5.py
math_and_python/6_3_numpy_100_1_10/: 6_3_10.py  6_3_11.py  6_3_2.py  6_3_3.py  6_3_4.py  6_3_6.py  6_3_7.py  6_3_8.py  6_3_9.py
math_and_python/6_4_numpy_100_11_20/: 6_4_1.py  6_4_2.py  6_4_3.py  6_4_4.py
(+28 files in other folders)
